--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title>tinyHeart</title>
+		<title>爱心鱼H5小游戏</title>
 		<style type="text/css">
 		body{
 				padding-top: 10px;
@@ -37,7 +37,7 @@
 		<div classs = "all_bg">
 				<div id = "allcanvas">
 						<canvas id = "canvas1" width="800" height="600"></canvas>
-						<canvas id = "canvas2" width="800" height="600"></canvas>//叠加在一起
+						<canvas id = "canvas2" width="800" height="600"></canvas><!--叠加在一起-->
 				</div>	
 		</div>
 		<script type="text/javascript" src="js/main.js"></script>
